--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 api-openweathermap.url=http://api.openweathermap.org/data/2.5/weather?units=metric&q=
-api-openweathermap.appid=
+api-openweathermap.appid=746907dfc4a678a82cb90d4325705aa7
